added data loader and transforms

--- a/YOLO.ipynb
+++ b/YOLO.ipynb
@@ -57,7 +57,88 @@
       "source": [
         "#dataset loading\n",
         "n_classes = 20\n",
-        "n_boxes = 2\n"
+        "n_boxes = 2\n",
+        "\n",
+        "#transform bounding boxes when resizing images\n",
+        "\n",
+        "class rescale_bbox(object):\n",
+        "  '''reshapes the boudning box coordinates in coordination with the input image\n",
+        "  Args:\n",
+        "      image_size(int, tuple) accepts int or tuple of ints: image shape and width\n",
+        "   \n",
+        "  '''\n",
+        "  def __init__(self, image_shape, transform):\n",
+        "    self.resize = image_shape\n",
+        "    self.factor = (1, 1)\n",
+        "    self.transform = transform\n",
+        "    self.class_dict = {'aeroplane' : 0,\n",
+        "                    'bicycle' : 1,\n",
+        "                    'bird' : 2,\n",
+        "                    'boat' : 3,\n",
+        "                    'bottle' : 4,\n",
+        "                    'bus' : 5,\n",
+        "                    'car' : 6,\n",
+        "                    'cat' : 7,\n",
+        "                    'chair' : 8,\n",
+        "                    'cow' : 9,\n",
+        "                    'diningtable' : 10,\n",
+        "                    'dog' : 11,\n",
+        "                    'horse' : 12,\n",
+        "                    'motorbike' : 13,\n",
+        "                    'person' : 14,\n",
+        "                    'pottedplant' : 15,\n",
+        "                    'sheep' : 16,\n",
+        "                    'sofa' : 17,\n",
+        "                    'train' : 18,\n",
+        "                    'tvmonitor' : 19}\n",
+        "    \n",
+        "  def __call__(self, img, target):\n",
+        "    \n",
+        "    label = target\n",
+        "    shape_x = int(label['annotation']['size']['width'])\n",
+        "    shape_y = int(label['annotation']['size']['height'])\n",
+        "    self.factor = (self.resize/shape_x, self.resize/shape_y)\n",
+        "    objects = label['annotation']['object']\n",
+        "    transformed_boxes = []\n",
+        "    try:\n",
+        "      for obj in objects:\n",
+        "        transformed_boxes.append(self.return_transformed_box(obj))\n",
+        "    except:\n",
+        "      transformed_boxes.append(self.return_transformed_box(objects))\n",
+        "    return self.transform(img), transformed_boxes\n",
+        "    \n",
+        "  def return_transformed_box(self, obj):\n",
+        "    class_id = self.class_dict[obj['name']]\n",
+        "    bndbox = [int(obj['bndbox']['xmin']),\n",
+        "             int(obj['bndbox']['xmax']),\n",
+        "             int(obj['bndbox']['ymin']),\n",
+        "             int(obj['bndbox']['ymax']),]\n",
+        "    \n",
+        "    return ((bndbox[0] + bndbox[1])/2 * self.factor[0],\\\n",
+        "            (bndbox[2] + bndbox[3])/2 * self.factor[1],\\\n",
+        "            (bndbox[1] - bndbox[0]) * self.factor[0],\\\n",
+        "            (bndbox[3] - bndbox[2]) * self.factor[1], class_id)\n",
+        "       \n",
+        "    \n",
+        "#loading data\n",
+        "import torchvision\n",
+        "import torch\n",
+        "transform = torchvision.transforms.Compose(\n",
+        "    [torchvision.transforms.Resize(448),\n",
+        "     torchvision.transforms.ToTensor(),\n",
+        "     torchvision.transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])\n",
+        "\n",
+        "trainset = torchvision.datasets.VOCDetection(root='./data', year='2007', \n",
+        "                                             image_set='train',\n",
+        "                                        download=True, transforms=rescale_bbox(448, transform))\n",
+        "trainloader = torch.utils.data.DataLoader(trainset, batch_size=64,\n",
+        "                                          shuffle=True, num_workers=2)\n",
+        "\n",
+        "testset = torchvision.datasets.VOCDetection(root='./data', year='2007', \n",
+        "                                             image_set='val',\n",
+        "                                       download=True, transforms=rescale_bbox(448, transform))\n",
+        "testloader = torch.utils.data.DataLoader(testset, batch_size=4,\n",
+        "                                         shuffle=False, num_workers=2)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -232,7 +313,14 @@
         "'''\n",
         "center_x_preds, center_y_preds, w_preds, h_preds, objectivity, class_logits = torch.split(prediction, [1,1,1,1,1,20], dim=1)\n",
         "classification_criterion = \n",
-        "localization_criterion = "
+        "localization_criterion = \n",
+        "\n",
+        "def yolo_loss(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super(yolo_loss, self).__init__()\n",
+        "    self.classification_loss = nn.MLEloss()\n",
+        "    self.bbregression_loss =\n",
+        "    self.noobjloss ="
       ],
       "execution_count": 0,
       "outputs": []
@@ -281,19 +369,6 @@
         "  preds1, preds2, _ = torch.split(pred_tensor, [5, 5, 20], dim=1)\n",
         "  \n",
         "  x_min_hat = pred_tensor[:, 0]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jq0cadtyvfrL",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "#training loop\n"
       ],
       "execution_count": 0,
       "outputs": []
