--- a/YOLO.ipynb
+++ b/YOLO.ipynb
@@ -311,16 +311,33 @@
         "preds : torch tensor consisting of center x, center y w, h normalized , \n",
         "         objectivity, 20 class probabilities \n",
         "'''\n",
-        "center_x_preds, center_y_preds, w_preds, h_preds, objectivity, class_logits = torch.split(prediction, [1,1,1,1,1,20], dim=1)\n",
+        "center_x_preds, center_y_preds, w_preds,\\\n",
+        "h_preds, objectivity, class_logits = torch.split(prediction, [1,1,1,1,1,20], dim=1)\n",
         "classification_criterion = \n",
         "localization_criterion = \n",
         "\n",
         "def yolo_loss(nn.Module):\n",
+        "  lambda_coord = 0.5\n",
+        "  lambda_noobj = 0.5\n",
         "  def __init__(self):\n",
         "    super(yolo_loss, self).__init__()\n",
-        "    self.classification_loss = nn.MLEloss()\n",
-        "    self.bbregression_loss =\n",
-        "    self.noobjloss ="
+        "    self.classification_loss = nn.CrossEntropyLoss()\n",
+        "    self.bbloss_x = nn.MSELoss()\n",
+        "    self.bbloss_y = nn.MSELoss()\n",
+        "    self.bbloss_w = nn.MSELoss()\n",
+        "    self.bbloss_h = nn.MSELoss()\n",
+        "    self.noobjloss = nn.MSELoss()\n",
+        "    self.objloss = nn.MSELoss()\n",
+        "    \n",
+        "  def forward(self, x, target):\n",
+        "    bbx, bby, bbw, bbh, logits, obj = torch.split(x, [1,1,1,1,1,20], dim=1)\n",
+        "    _bbx, _bby, _bbw, _bbh, label = torch.split(target, 1, dim=1)\n",
+        "    return self.classification_loss(logits, label) + \\\n",
+        "              self.lambda_coord * self.bbloss_x(bby, _bby) + \\\n",
+        "              self.lambda_coord * self.bbloss_w(F.sqrt(bbw), F.sqrt(_bbw)) + \\\n",
+        "              self.lambda_coord * self.bbloss_h(F.sqrt(bbw), F.sqrt(_bbw)) + \\\n",
+        "              self.objloss(obj, torch.ones(obj.size(0)))\n",
+        "  "
       ],
       "execution_count": 0,
       "outputs": []
