added non max suppression

--- a/YOLO.ipynb
+++ b/YOLO.ipynb
@@ -39,10 +39,9 @@
         "###Summary\n",
         "\n",
         "\n",
-        "*   The network outputs a tensor of shape (7, 7, 10+n_classes). At each box in the 7x7 grid the network predicts two bounding boxes each box predicts noramlized offset of cooridnates of the bounding box from the grid, normalized width and height of detection box and objectivity. The class logits, vector of size n_classes corresponds to remaining channels\n",
-        "*   Loss function has three terms which includes classfiication loss, localization loss, object loss and no object loss \n",
-        "*   All the boxes with class objectivity score  < 0.25 are ignored \n",
-        "*   The right box corresponding to the box in the label is identified using non maximal supression where the predictions of same class with iou greater than threshold are suppressed and only the box with maximum objectivity is tacken as prediction and identified as match to evalaute loss\n",
+        "*   The network outputs a tensor of shape (7, 7, 10+n_classes). At each box in the 7x7 grid the network predicts two bounding boxes, each box predicts offset of cooridnates of the bounding box from the grid, normalized width and height of detection box and objectivity score and the class logits, vector of size n_classes on the remaining channels.\n",
+        "*   Loss function has three terms which includes classfiication loss, localization loss,  objectivity loss  \n",
+        "*   Multiple predictions of same detection instance are rejected using non maximal supression where the predictions of same class with iou greater than threshold are suppressed and only the box with maximum objectivity is tacken as prediction and identified as match to evalaute loss\n",
         "\n",
         "\n"
       ]
@@ -55,6 +54,10 @@
         "colab": {}
       },
       "source": [
+        "import torch\n",
+        "import torchvision\n",
+        "\n",
+        "\n",
         "#dataset loading\n",
         "n_classes = 20\n",
         "n_boxes = 2\n",
@@ -120,9 +123,7 @@
         "            (bndbox[3] - bndbox[2]) * self.factor[1], class_id)\n",
         "       \n",
         "    \n",
-        "#loading data\n",
-        "import torchvision\n",
-        "import torch\n",
+        "#download data \n",
         "transform = torchvision.transforms.Compose(\n",
         "    [torchvision.transforms.Resize(448),\n",
         "     torchvision.transforms.ToTensor(),\n",
@@ -371,21 +372,103 @@
         "      intersection = diffx * diffy\n",
         "      return intersection / (bb1[2] * bb1[3] + bb2[2] * bb2[3] - intersection) \n",
         "  return 0\n",
+        "\n",
+        "def non_max_suppression(predicted_tensor):\n",
+        "  #grid coordinates to add to predicted offset\n",
+        "  x = torch.tensor(torch.arange(7), grad)\n",
+        "  y = torch.tensor(torch.arange(7))\n",
+        "  grid_x, grid_y = torch.meshgrid(x, y) / 7\n",
+        "  predicted_tensor[:,0,:,:] += grid_x\n",
+        "  predicted_tensor[:,1,:,:] += grid_y\n",
+        "  predicted_tensor[:,5,:,:] += grid_x\n",
+        "  predicted_tensor[:,6,:,:] += grid_y\n",
         "  \n",
-        "def get_labels_with_predicitons(ground_truth, pred_tensor):\n",
+        "  pred_reshaped = predicted_tensor.view(-1, (n_boxes*5 + n_classes))\n",
+        "  box1, box2, class_probab = torch.split(pred_reshaped, [5, 5, n_classes], dim=1)\n",
+        "  max_prob_boxes = [(box1[i] if box1[i][-1] > box2[1][-1] else box2[i], \\\n",
+        "                     class_probab[i]) \n",
+        "                   for i in range(box1.size(0))]\n",
+        "  sorted_ = sorted(max_prob_boxes, key=lambda a:a[0][-1])\n",
+        "  selected_boxes = []\n",
+        "  \n",
+        "  iou_threshold = 0.6\n",
+        "  \n",
+        "  while len(sorted_) > 0:\n",
+        "    this_box = sorted_[0]\n",
+        "    del sorted_[0]\n",
+        "    sorted_new = []\n",
+        "    for i in range(len(sorted_)):\n",
+        "      if not torch.argmax(sorted_[j][1]) == this_label and \\\n",
+        "            IoU(this_box, sorted_[i]) > iou_threshold:\n",
+        "        sorted_new.append(box)\n",
+        "        \n",
+        "    sorted_ = sorted_new\n",
+        "    selected_boxes.append(this_box)\n",
+        "  \n",
+        "  return selcted_boxes\n",
+        "\n",
+        "    \n",
+        "def get_labels_with_predictions(ground_truth, pred_tensor):\n",
         "  '''\n",
         "  ground truth : a tensor with shape length of boxes and columns \n",
         "                equal to 5 corresponding to bounding box params and class label\n",
         "  pred_tensor  : a tensor with shape 30, 7, 7\n",
         "  '''\n",
-        "  #need to make a grid of values corresponding to coordinates\n",
-        "  x = torch.tensor(torch.arange(7))\n",
-        "  y = torch.tensor(torch.arange(7))\n",
-        "  grid_x, grid_y = torch.meshgrid(x, y)\n",
-        "  pred_tensor = pred_tensor.view((-1, 30))\n",
-        "  preds1, preds2, _ = torch.split(pred_tensor, [5, 5, 20], dim=1)\n",
         "  \n",
-        "  x_min_hat = pred_tensor[:, 0]"
+        "  \n",
+        "  return objects, nonobjects"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XOytDtIY-Nwf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "6df5024d-770c-4a21-e6ba-e093bc23af43"
+      },
+      "source": [
+        "a = [(1,(2,1)),(3,(4,5)),(2,(3,2))]\n",
+        "print(sorted(a, key=lambda l:l[1][0]))"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[(1, (2, 1)), (2, (3, 2)), (3, (4, 5))]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TYxBHueM-XXn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "del a[0]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5tFvOD9GKZyQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
