--- a/YOLO.ipynb
+++ b/YOLO.ipynb
@@ -100,7 +100,8 @@
         "    label = target\n",
         "    shape_x = int(label['annotation']['size']['width'])\n",
         "    shape_y = int(label['annotation']['size']['height'])\n",
-        "    self.factor = (self.resize/shape_x, self.resize/shape_y)\n",
+        "#     self.factor = (self.resize/shape_x, self.resize/shape_y)\n",
+        "    self.factor = (1/shape_x, 1/shape_y)\n",
         "    objects = label['annotation']['object']\n",
         "    transformed_boxes = []\n",
         "    try:\n",
@@ -377,11 +378,11 @@
         "  #grid coordinates to add to predicted offset\n",
         "  x = torch.tensor(torch.arange(7), grad)\n",
         "  y = torch.tensor(torch.arange(7))\n",
-        "  grid_x, grid_y = torch.meshgrid(x, y) / 7\n",
-        "  predicted_tensor[:,0,:,:] += grid_x\n",
-        "  predicted_tensor[:,1,:,:] += grid_y\n",
-        "  predicted_tensor[:,5,:,:] += grid_x\n",
-        "  predicted_tensor[:,6,:,:] += grid_y\n",
+        "  grid_x, grid_y = torch.meshgrid(x, y) \n",
+        "  predicted_tensor[:,0,:,:] = (predicted_tensor[:,0,:,:] + grid_x)/7\n",
+        "  predicted_tensor[:,1,:,:] = (predicted_tensor[:,1,:,:] + grid_y)/7\n",
+        "  predicted_tensor[:,5,:,:] = (predicted_tensor[:,5,:,:] + grid_x)/7\n",
+        "  predicted_tensor[:,6,:,:] = (predicted_tensor[:,6,:,:] + grid_y)/7\n",
         "  \n",
         "  pred_reshaped = predicted_tensor.view(-1, (n_boxes*5 + n_classes))\n",
         "  box1, box2, class_probab = torch.split(pred_reshaped, [5, 5, n_classes], dim=1)\n",
@@ -407,13 +408,28 @@
         "  \n",
         "  return selcted_boxes\n",
         "\n",
-        "    \n",
+        "def prepare_labels(labels):\n",
+        "  '''return a tensor of shape 7x7x5, and object identity function\n",
+        "  '''\n",
+        "  label_tensor=torch.zeros((len(labels), 5, 7, 7)\n",
+        "  for i,label in enumerate(labels):\n",
+        "    for j,box in enumerate(label):\n",
+        "      coord_x, coord_y =  int(box[0]*7),  int(box[1]*7)\n",
+        "      label_tensor[i, 0, coord_x, coord_y] = box[0]\n",
+        "      label_tensor[i, 1, coord_x, coord_y] = box[1]\n",
+        "      label_tensor[i, 2, coord_x, coord_y] = box[2]\n",
+        "      label_tensor[i, 3, coord_x, coord_y] = box[3]\n",
+        "      label_tensor[i, 4, coord_x, coord_y] = box[5]\n",
+        "  objectivity = torch.sum(label_tensor, dim=1) > 0\n",
+        "  return label_tensor, objectivity      \n",
+        "                     \n",
         "def get_labels_with_predictions(ground_truth, pred_tensor):\n",
         "  '''\n",
         "  ground truth : a tensor with shape length of boxes and columns \n",
         "                equal to 5 corresponding to bounding box params and class label\n",
         "  pred_tensor  : a tensor with shape 30, 7, 7\n",
         "  '''\n",
+        "  selected_boxes = non_max_suppression(pred_tensor)\n",
         "  \n",
         "  \n",
         "  return objects, nonobjects"
@@ -426,17 +442,17 @@
       "metadata": {
         "id": "XOytDtIY-Nwf",
         "colab_type": "code",
+        "outputId": "6df5024d-770c-4a21-e6ba-e093bc23af43",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "6df5024d-770c-4a21-e6ba-e093bc23af43"
+        }
       },
       "source": [
         "a = [(1,(2,1)),(3,(4,5)),(2,(3,2))]\n",
         "print(sorted(a, key=lambda l:l[1][0]))"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
