added training code

--- a/YOLO.ipynb
+++ b/YOLO.ipynb
@@ -313,10 +313,6 @@
         "preds : torch tensor consisting of center x, center y w, h normalized , \n",
         "         objectivity, 20 class probabilities \n",
         "'''\n",
-        "center_x_preds, center_y_preds, w_preds,\\\n",
-        "h_preds, objectivity, class_logits = torch.split(prediction, [1,1,1,1,1,20], dim=1)\n",
-        "classification_criterion = \n",
-        "localization_criterion = \n",
         "\n",
         "def yolo_loss(nn.Module):\n",
         "  lambda_coord = 0.5\n",
@@ -331,15 +327,61 @@
         "    self.noobjloss = nn.MSELoss()\n",
         "    self.objloss = nn.MSELoss()\n",
         "    \n",
-        "  def forward(self, x, target):\n",
-        "    bbx, bby, bbw, bbh, logits, obj = torch.split(x, [1,1,1,1,1,20], dim=1)\n",
-        "    _bbx, _bby, _bbw, _bbh, label = torch.split(target, 1, dim=1)\n",
-        "    return self.classification_loss(logits, label) + \\\n",
-        "              self.lambda_coord * self.bbloss_x(bby, _bby) + \\\n",
-        "              self.lambda_coord * self.bbloss_w(F.sqrt(bbw), F.sqrt(_bbw)) + \\\n",
-        "              self.lambda_coord * self.bbloss_h(F.sqrt(bbw), F.sqrt(_bbw)) + \\\n",
-        "              self.objloss(obj, torch.ones(obj.size(0)))\n",
+        "  def forward(self, objects, no_objects, class_probs, labels):\n",
+        "    bbx, bby, bbw, bbh, obj = torch.split(objects, 1, dim=1)\n",
+        "    _bbx, _bby, _bbw, _bbh, label = torch.split(labels, 1, dim=1)\n",
+        "    objectivity = torch.sum(label_tensor, dim=1) > 0\n",
+        "    \n",
+        "    obj_conf = 1 / (1 + torch.exp(-1 * obj))\n",
+        "    noobj_conf = 1 / (1 + torch.exp(-1 * no_objects[:,-1,:,:]))\n",
+        "    \n",
+        "    return self.classification_loss(class_probs, label) + \\\n",
+        "              self.lambda_coord * self.bbloss_x(bbx, _bbx) + \\\n",
+        "              self.lambda_coord * self.bbloss_x(bbx, _bbx) + \\\n",
+        "              self.bbloss_w(F.sqrt(bbw), F.sqrt(_bbw)) + \\\n",
+        "              self.bbloss_h(F.sqrt(bbh), F.sqrt(_bbh)) + \\\n",
+        "              self.objloss(obj_conf, objectivity) + \\\n",
+        "              self.lambda_noobj * self.noobjloss(noobj_conf, 1-objectivity)\n",
         "  "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zdoqqrDRh5MN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "loss = yolo_loss()\n",
+        "\n",
+        "#training loop\n",
+        "global_counter = 0\n",
+        "for i in range(n_epochs):\n",
+        "  stats_loss = []\n",
+        "  #make a iter object to feed data to the network\n",
+        "  dataiter = iter(trainloader)\n",
+        "  \n",
+        "  for _ in range(len(trainloader)):\n",
+        "    x, y = next(dataiter)\n",
+        "    x = x.to(device)\n",
+        "    y = y.to(device)\n",
+        "    predictions = yolonet(x)\n",
+        "    objects, nobjects, class_probs, labels = get_labels_with_predictions(y, predictions)\n",
+        "\n",
+        "    optimizer.zero_grad()\n",
+        "    _loss = loss(objects, no_objects, class_probs, labels)\n",
+        "    _loss.backward()\n",
+        "    optimizer.step()\n",
+        "    stats_loss.append(_loss.item())\n",
+        "    \n",
+        "    if global_counter % 200 == 0:\n",
+        "      print('Training loss at iteration {} : {}'.format(global_counter, \n",
+        "                                                        stats_loss[-1]))\n",
+        "    global_counter += 1\n",
+        "get_labels_with_predictions(y_labels, predictions)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -376,7 +418,7 @@
         "\n",
         "def non_max_suppression(predicted_tensor):\n",
         "  #grid coordinates to add to predicted offset\n",
-        "  x = torch.tensor(torch.arange(7), grad)\n",
+        "  x = torch.tensor(torch.arange(7))\n",
         "  y = torch.tensor(torch.arange(7))\n",
         "  grid_x, grid_y = torch.meshgrid(x, y) \n",
         "  predicted_tensor[:,0,:,:] = (predicted_tensor[:,0,:,:] + grid_x)/7\n",
@@ -411,7 +453,7 @@
         "def prepare_labels(labels):\n",
         "  '''return a tensor of shape 7x7x5, and object identity function\n",
         "  '''\n",
-        "  label_tensor=torch.zeros((len(labels), 5, 7, 7)\n",
+        "  label_tensor=torch.zeros((len(labels), 5, 7, 7))\n",
         "  for i,label in enumerate(labels):\n",
         "    for j,box in enumerate(label):\n",
         "      coord_x, coord_y =  int(box[0]*7),  int(box[1]*7)\n",
@@ -419,7 +461,7 @@
         "      label_tensor[i, 1, coord_x, coord_y] = box[1]\n",
         "      label_tensor[i, 2, coord_x, coord_y] = box[2]\n",
         "      label_tensor[i, 3, coord_x, coord_y] = box[3]\n",
-        "      label_tensor[i, 4, coord_x, coord_y] = box[5]\n",
+        "      label_tensor[i, 4, coord_x, coord_y] = box[4]\n",
         "  objectivity = torch.sum(label_tensor, dim=1) > 0\n",
         "  return label_tensor, objectivity      \n",
         "                     \n",
@@ -429,49 +471,20 @@
         "                equal to 5 corresponding to bounding box params and class label\n",
         "  pred_tensor  : a tensor with shape 30, 7, 7\n",
         "  '''\n",
-        "  selected_boxes = non_max_suppression(pred_tensor)\n",
+        "  labels, objectivity = prepare_labels(ground_truth)\n",
+        "  x = torch.tensor(torch.arange(7))\n",
+        "  y = torch.tensor(torch.arange(7))\n",
+        "  grid_x, grid_y = torch.meshgrid(x, y) \n",
+        "  pred_tensor[:,0,:,:] = (pred_tensor[:,0,:,:] + grid_x)/7\n",
+        "  pred_tensor[:,1,:,:] = (pred_tensor[:,1,:,:] + grid_y)/7\n",
+        "  pred_tensor[:,5,:,:] = (pred_tensor[:,5,:,:] + grid_x)/7\n",
+        "  pred_tensor[:,6,:,:] = (pred_tensor[:,6,:,:] + grid_y)/7\n",
         "  \n",
-        "  \n",
-        "  return objects, nonobjects"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XOytDtIY-Nwf",
-        "colab_type": "code",
-        "outputId": "6df5024d-770c-4a21-e6ba-e093bc23af43",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "a = [(1,(2,1)),(3,(4,5)),(2,(3,2))]\n",
-        "print(sorted(a, key=lambda l:l[1][0]))"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[(1, (2, 1)), (2, (3, 2)), (3, (4, 5))]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TYxBHueM-XXn",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "del a[0]"
+        "  box1, box2, class_probab = torch.split(pred_reshaped, [5, 5, n_classes], dim=1)\n",
+        "  selected_box_id = box1[:,:,:,-1] - box2[:,:,:,-1] > 0\n",
+        "  boxes = box1*selected_box_id + box2*(1 - selected_box_id)\n",
+        "  rejected_boxes = box1*(1 - selected_box_id) + box2*selected_box_id\n",
+        "  return boxes*objectivity, rejected_boxes, class_probab, labels"
       ],
       "execution_count": 0,
       "outputs": []
